--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-fhir.vdor.json
+ig = fsh-generated/resources/ImplementationGuide-hl7.fhir.us.vdor.json
 template = fhir.base.template#current
