--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -39,8 +39,11 @@ dependencies:
     version: 3.0.0 
     id: hl7fhirusvrdr
   hl7.fhir.us.mdi:
-    version: 2.0.0-snapshot2
+    version: 2.0.0
     id: hl7fhirusmdi
+  fhir.nvdrs:
+    version: dev
+    id: fhirnvdrs
 groups:
   BundlesAndOtherCoreProfiles:
     name: Core Profiles
